--- a/resnet/samuco.ipynb
+++ b/resnet/samuco.ipynb
@@ -948,6 +948,7 @@
     "        images = image_set[s:s+batch_size]\n",
     "        preprocessed_images = preprocess_batch(images, transformer)\n",
     "        probs = process_batch(net, preprocessed_images)\n",
+    "        probs[probs < 0.00001] = 0\n",
     "        write_to_file(out_file, probs, images)\n",
     "        if (s / batch_size) % display_interval == 0:\n",
     "            print \"Processed %i images in %f sec\" % (s, time.time() - start_time)\n",
@@ -957,7 +958,9 @@
     "    probs = []\n",
     "    for image in left:\n",
     "        preprocessed_image = transformer.preprocess('data', caffe.io.load_image(image))\n",
-    "        probs.append(process_image(net, preprocessed_image))\n",
+    "        probs_tmp = process_image(net, preprocessed_image)\n",
+    "        probs_tmp[probs_tmp < 0.00001] = 0\n",
+    "        probs.append(probs_tmp)\n",
     "    write_to_file(out_file, probs, left)\n",
     "    \n",
     "    print \"Finished extracting probabilities in %f sec\" % (time.time() - start_time)"
