add test accuracy & loss plots

--- a/resnet/fine_tune_vgg_16.ipynb
+++ b/resnet/fine_tune_vgg_16.ipynb
@@ -428,26 +428,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def eval_kaggle_net(weights, test_iters=200):\n",
-    "    test_net = caffe.Net(kaggle_net(train=False), weights, caffe.TEST)\n",
-    "    accuracy = 0\n",
-    "    loss = 0\n",
-    "    for it in xrange(test_iters):\n",
-    "        accuracy += test_net.forward()['acc']\n",
-    "        loss += test_net.forward()['loss']\n",
-    "    accuracy /= test_iters\n",
-    "    loss /= test_iters\n",
-    "    return test_net, loss, accuracy"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 9,
    "metadata": {
     "collapsed": true
@@ -474,21 +454,6 @@
     "                                  (n, loss[n][it], 100*acc[n][it])\n",
     "                                  for n, _ in solvers)\n",
     "            print '%3d) %s' % (it, loss_disp)  \n",
-    "\n",
-    "\n",
-    "        if it % test_interval == 0 or it + 1 == niter:\n",
-    "\n",
-    "            # Save the learned weights from both nets.\n",
-    "            weight_dir = tempfile.mkdtemp()\n",
-    "            weights = {}\n",
-    "            for name, s in solvers:\n",
-    "                filename = 'weights.%s.caffemodel' % name\n",
-    "                weights[name] = os.path.join(weight_dir, filename)\n",
-    "                s.net.save(weights[name])\n",
-    "\n",
-    "            test_net, loss, accuracy = eval_kaggle_net(weights)\n",
-    "            print 'Validation loss, accuracy, trained from ImageNet initialization: %f, %3.1f%%' % (loss, 100*accuracy)\n",
-    "    \n",
     "\n",
     "    # Save the learned weights from both nets.\n",
     "    weight_dir = tempfile.mkdtemp()\n",
@@ -676,16 +641,23 @@
    },
    "outputs": [],
    "source": [
-    "def eval_kaggle_net(weights, test_iters=200):\n",
+    "def eval_kaggle_net(weights, test_iters=202):\n",
     "    test_net = caffe.Net(kaggle_net(train=False), weights, caffe.TEST)\n",
-    "    accuracy = 0\n",
-    "    loss = 0\n",
+    "    #accuracy = 0\n",
+    "    #loss = 0\n",
+    "    test_loss = []\n",
+    "    test_acc = []\n",
+    "    \n",
+    "    print 'Validating trained model for %d iterations...' % test_iters   \n",
     "    for it in xrange(test_iters):\n",
-    "        accuracy += test_net.forward()['acc']\n",
-    "        loss += test_net.forward()['loss']\n",
-    "    accuracy /= test_iters\n",
-    "    loss /= test_iters\n",
-    "    return test_net, loss, accuracy"
+    "        test_acc = test_acc.append(test_net.forward()['acc'])\n",
+    "        test_loss = test_loss.append(test_net.forward()['loss'])\n",
+    "        #accuracy += test_net.forward()['acc']\n",
+    "        #loss += test_net.forward()['loss']\n",
+    "            \n",
+    "    #accuracy /= test_iters\n",
+    "    #loss /= test_iters\n",
+    "    return test_net, test_loss, test_acc, sum(test_loss)/=test_iters, sum(test_acc)/=test_iters"
    ]
   },
   {
@@ -704,9 +676,37 @@
     }
    ],
    "source": [
-    "test_net, loss, accuracy = eval_kaggle_net(kaggle_weights)\n",
+    "test_net, test_loss, test_acc, loss, acccuracy = eval_kaggle_net(kaggle_weights)\n",
     "print 'Validation loss, accuracy, trained from ImageNet initialization: %f, %3.1f%%' % (loss, 100*accuracy)\n",
     "del test_net"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "plot(np.vstack([train_loss]).T)\n",
+    "plot(np.vstack([test_loss]).T)\n",
+    "xlabel('Iteration #')\n",
+    "ylabel('Loss')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "plot(np.vstack([train_acc]).T)\n",
+    "plot(np.vstack([test_acc]).T)\n",
+    "xlabel('Iteration #')\n",
+    "ylabel('Accuracy')"
    ]
   },
   {
