--- a/resnet/fine_tune_vgg_16.ipynb
+++ b/resnet/fine_tune_vgg_16.ipynb
@@ -13,6 +13,53 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from numpy import *\n",
+    "import matplotlib.pyplot as plt\n",
+    "from pylab import *\n",
+    "conf_arr = [\n",
+    "    [33,2,0,0,0,0,0,0,0,1,3],\n",
+    "    [3,31,0,0,0,0,0,0,0,0,0], \n",
+    "    [0,4,41,0,0,0,0,0,0,0,1], \n",
+    "    [0,1,0,30,0,6,0,0,0,0,1], \n",
+    "    [0,0,0,0,38,10,0,0,0,0,0],\n",
+    "    [0,0,0,3,1,39,0,0,0,0,4], \n",
+    "    [0,2,2,0,4,1,31,0,0,0,2], \n",
+    "    [0,1,0,0,0,0,0,36,0,2,0], \n",
+    "    [0,0,0,0,0,0,1,5,37,5,1], \n",
+    "    [3,0,0,0,0,0,0,0,0,39,0], \n",
+    "    [0,0,0,0,0,0,0,0,0,0,38] ]\n",
+    "\n",
+    "norm_conf = []\n",
+    "for i in conf_arr:\n",
+    "        a = 0\n",
+    "        tmp_arr = []\n",
+    "        a = sum(i,0)\n",
+    "        for j in i:\n",
+    "                tmp_arr.append(float(j)/float(a))\n",
+    "        norm_conf.append(tmp_arr)\n",
+    "\n",
+    "plt.clf()\n",
+    "fig = plt.figure()\n",
+    "ax = fig.add_subplot(111)\n",
+    "res = ax.imshow(array(norm_conf), cmap=cm.jet, interpolation='nearest')\n",
+    "\n",
+    "\n",
+    "for i,j in ((x,y) for x in xrange(len(conf_arr))\n",
+    "            for y in xrange(len(conf_arr[0]))):\n",
+    "    ax.annotate(str(conf_arr[i][j]),xy=(i,j))\n",
+    "\n",
+    "cb = fig.colorbar(res)\n",
+    "savefig(\"confusion_matrix.png\", format=\"png\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -28,24 +75,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
+    "import os\n",
+    "cwd = os.getcwd()\n",
     "caffe_root = '/home/jackcen/Desktop/caffe/'\n",
-    "data_root = '/home/jackcen/Desktop/cs229/data/'"
+    "data_root = '/home/jackcen/Desktop/cs229/data/'\n",
+    "\n",
+    "# Custom Definitions\n",
+    "if \"samuco\" in cwd:\n",
+    "    caffe_root = '/Users/samuco/Downloads/caffe-opencl/'\n",
+    "    data_root = '/Users/samuco/Downloads/caffe-opencl/cs229/data/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/samuco/Downloads/caffe-opencl/python/caffe/pycaffe.py:13: RuntimeWarning: to-Python converter for std::__1::vector<int, std::__1::allocator<int> > already registered; second conversion method ignored.\n",
+      "  from ._caffe import \\\n",
+      "/Users/samuco/anaconda/lib/python2.7/site-packages/matplotlib/font_manager.py:273: UserWarning: Matplotlib is building the font cache using fc-list. This may take a moment.\n",
+      "  warnings.warn('Matplotlib is building the font cache using fc-list. This may take a moment.')\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "sys.path.insert(0, caffe_root + 'python')\n",
@@ -69,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -79,6 +144,8 @@
      "output_type": "stream",
      "text": [
       "models/vgg_16/211839e770f7b538e2d8 already exists! Please make sure you're not overwriting anything important!\n",
+      "/Users/samuco/Downloads/caffe-opencl/models/vgg_16/211839e770f7b538e2d8\n",
+      "['##Information', '', 'name: 16-layer model from the arXiv paper: \"Very Deep Convolutional Networks for Large-Scale Image Recognition\"', '', 'caffemodel: VGG_ILSVRC_16_layers', '', 'caffemodel_url: http://www.robots.ox.ac.uk/~vgg/software/very_deep/caffe/VGG_ILSVRC_16_layers.caffemodel', '', 'license: see http://www.robots.ox.ac.uk/~vgg/research/very_deep/', '', 'caffe_version: trained using a custom Caffe-based framework', '', 'gist_id: 211839e770f7b538e2d8', '', '## Description', '', 'The model is an improved version of the 16-layer model used by the VGG team in the ILSVRC-2014 competition. The details can be found in the following [arXiv paper](http://arxiv.org/pdf/1409.1556):', '', 'Very Deep Convolutional Networks for Large-Scale Image Recognition', 'K. Simonyan, A. Zisserman', 'arXiv:1409.1556', '', 'Please cite the paper if you use the model.', '', 'In the paper, the model is denoted as the configuration `D` trained with scale jittering. The input images should be zero-centered by mean pixel (rather than mean image) subtraction. Namely, the following BGR values should be subtracted: `[103.939, 116.779, 123.68]`.', '', '## Caffe compatibility', '', 'The models are currently supported by the `dev` branch of [Caffe](https://github.com/BVLC/caffe/), but are not yet compatible with `master`.', 'An example of how to use the models in Matlab can be found in [matlab/caffe/matcaffe_demo_vgg.m](https://github.com/BVLC/caffe/blob/dev/matlab/caffe/matcaffe_demo_vgg_mean_pix.m)', '', '## ILSVRC-2012 performance', '', 'Using dense single-scale evaluation (the smallest image side rescaled to 384), the top-5 classification error on the validation set of ILSVRC-2012 is 8.1% (see Table 3 in the [arXiv paper](http://arxiv.org/pdf/1409.1556)).', '', 'Using dense multi-scale evaluation (the smallest image side rescaled to 256, 384, and 512), the top-5 classification error is 7.5% on the validation set and 7.4% on the test set of ILSVRC-2012 (see Table 4 in the [arXiv paper](http://arxiv.org/pdf/1409.1556)).']\n",
       "ERROR: '---' is not in list\n",
       "usage: download_model_binary.py [-h] dirname\n",
       "download_model_binary.py: error: argument dirname: Must be valid Caffe model directory with a correct readme.md\n"
@@ -90,16 +157,30 @@
     "import os\n",
     "os.chdir(caffe_root)  # from caffe root\n",
     "!scripts/download_model_from_gist.sh 211839e770f7b538e2d8 models/vgg_16\n",
-    "!scripts/download_model_binary.py /home/jackcen/Desktop/caffe/models/vgg_16/211839e770f7b538e2d8\n"
+    "script_path = caffe_root + \"models/vgg_16/211839e770f7b538e2d8\"\n",
+    "print(script_path)\n",
+    "!scripts/download_model_binary.py {script_path}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-19-5fa24c36b2a7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mweights\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcaffe_root\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'models/vgg_16/VGG_ILSVRC_16_layers.caffemodel'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0;32massert\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexists\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mweights\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "# Define weights, the path to the Vgg-16 pretrained weights we just downloaded, and make sure it exists.\n",
     "import os\n",
